change the link in the footer and change the margin in card

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Munsif Ali</a>.
+        >. Coded by
+        <a href="https://www.instagram.com/munsif_ali_taj">Munsif Ali</a>.
       </div>
     </footer>
   </body>
